--- a/build
+++ b/build
@@ -27,6 +27,8 @@ cd "$ROOTDIR/out/build-llvm-host"
 cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_PROJECTS="lld;clang" \
   -DLLVM_ENABLE_LIBXML2=OFF \
+  -DLLVM_ENABLE_ZLIB=OFF \
+  -DLLVM_ENABLE_ZSTD=OFF \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DLLVM_INCLUDE_TESTS=OFF \
@@ -50,8 +52,7 @@ cmake "$ROOTDIR/zig" \
   -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
   -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DCMAKE_BUILD_TYPE=Release \
-  -DZIG_VERSION="$ZIG_VERSION" \
-  -DZIG_STATIC_ZLIB=ON
+  -DZIG_VERSION="$ZIG_VERSION"
 make "$JOBS" install
 
 # Now we have Zig as a cross compiler.
