build: disable more unnecessary tools
This saves time and space, and avoids bugs not triggered by the critical
path.

--- a/build
+++ b/build
@@ -24,22 +24,31 @@ esac
 mkdir -p "$ROOTDIR/out/build-llvm-host"
 cd "$ROOTDIR/out/build-llvm-host"
 cmake "$ROOTDIR/llvm" \
+  -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
+  -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
+  -DCMAKE_BUILD_TYPE=Release \
   -DLLVM_ENABLE_PROJECTS="lld;clang" \
   -DLLVM_ENABLE_LIBXML2=OFF \
   -DLLVM_ENABLE_ZSTD=OFF \
-  -DCMAKE_INSTALL_PREFIX="$ROOTDIR/out/host" \
-  -DCMAKE_PREFIX_PATH="$ROOTDIR/out/host" \
   -DLLVM_INCLUDE_TESTS=OFF \
   -DLLVM_INCLUDE_GO_TESTS=OFF \
   -DLLVM_INCLUDE_EXAMPLES=OFF \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
+  -DLLVM_INCLUDE_DOCS=OFF \
   -DLLVM_ENABLE_BINDINGS=OFF \
   -DLLVM_ENABLE_OCAMLDOC=OFF \
   -DLLVM_ENABLE_Z3_SOLVER=OFF \
+  -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF \
+  -DLLVM_TOOL_LLVM_LTO_BUILD=OFF \
+  -DLLVM_TOOL_LTO_BUILD=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_INCLUDE_DOCS=OFF \
-  -DLLVM_INCLUDE_DOCS=OFF \
-  -DCMAKE_BUILD_TYPE=Release
+  -DCLANG_TOOL_CLANG_IMPORT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=OFF \
+  -DCLANG_TOOL_C_INDEX_TEST_BUILD=OFF \
+  -DCLANG_TOOL_ARCMT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_C_ARCMT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_LIBCLANG_BUILD=OFF
 cmake --build . --target install
 
 # Now we build Zig, still with system C/C++ compiler, linking against LLVM,
@@ -158,11 +167,20 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_INCLUDE_BENCHMARKS=OFF \
   -DLLVM_INCLUDE_DOCS=OFF \
   -DLLVM_DEFAULT_TARGET_TRIPLE="$TARGET" \
+  -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF \
+  -DLLVM_TOOL_LLVM_LTO_BUILD=OFF \
+  -DLLVM_TOOL_LTO_BUILD=OFF \
   -DCLANG_TABLEGEN="$ROOTDIR/out/build-llvm-host/bin/clang-tblgen" \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_INCLUDE_DOCS=OFF \
   -DCLANG_INCLUDE_TESTS=OFF \
   -DCLANG_ENABLE_ARCMT=ON \
+  -DCLANG_TOOL_CLANG_IMPORT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=OFF \
+  -DCLANG_TOOL_C_INDEX_TEST_BUILD=OFF \
+  -DCLANG_TOOL_ARCMT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_C_ARCMT_TEST_BUILD=OFF \
+  -DCLANG_TOOL_LIBCLANG_BUILD=OFF \
   -DLIBCLANG_BUILD_STATIC=ON
 cmake --build . --target install
 
