--- a/build
+++ b/build
@@ -41,6 +41,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF \
   -DLLVM_TOOL_LLVM_LTO_BUILD=OFF \
   -DLLVM_TOOL_LTO_BUILD=OFF \
+  -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_INCLUDE_DOCS=OFF \
   -DCLANG_TOOL_CLANG_IMPORT_TEST_BUILD=OFF \
@@ -170,6 +171,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_TOOL_LLVM_LTO2_BUILD=OFF \
   -DLLVM_TOOL_LLVM_LTO_BUILD=OFF \
   -DLLVM_TOOL_LTO_BUILD=OFF \
+  -DLLVM_TOOL_REMARKS_SHLIB_BUILD=OFF \
   -DCLANG_TABLEGEN="$ROOTDIR/out/build-llvm-host/bin/clang-tblgen" \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_INCLUDE_DOCS=OFF \
