build: remove -Denable-stage1

--- a/build
+++ b/build
@@ -196,5 +196,4 @@ $ZIG build \
   -Dstrip \
   -Dtarget="$TARGET" \
   -Dcpu="$MCPU" \
-  -Dversion-string="$ZIG_VERSION" \
-  -Denable-stage1
+  -Dversion-string="$ZIG_VERSION"
