avoid installing any target-specific binaries
These can cause irrelevant errors such as the RPATH nonsense that I just
ran into.

--- a/build
+++ b/build
@@ -159,6 +159,7 @@ cmake "$ROOTDIR/llvm" \
   -DLLVM_ENABLE_ZSTD=FORCE_ON \
   -DLLVM_USE_STATIC_ZSTD=ON \
   -DLLVM_TABLEGEN="$ROOTDIR/out/host/bin/llvm-tblgen" \
+  -DLLVM_BUILD_UTILS=OFF \
   -DLLVM_BUILD_TOOLS=OFF \
   -DLLVM_BUILD_STATIC=ON \
   -DLLVM_INCLUDE_UTILS=OFF \
@@ -182,7 +183,8 @@ cmake "$ROOTDIR/llvm" \
   -DCLANG_TOOL_ARCMT_TEST_BUILD=OFF \
   -DCLANG_TOOL_C_ARCMT_TEST_BUILD=OFF \
   -DCLANG_TOOL_LIBCLANG_BUILD=OFF \
-  -DLIBCLANG_BUILD_STATIC=ON
+  -DLIBCLANG_BUILD_STATIC=ON \
+  -DLLD_BUILD_TOOLS=OFF
 cmake --build . --target install
 
 # Finally, we can cross compile Zig itself, with Zig.
