--- a/build
+++ b/build
@@ -6,7 +6,7 @@ TARGET="$1" # Example: riscv64-linux-gnu
 MCPU="$2" # Examples: `baseline`, `native`, `generic+v7a`, or `arm1176jzf_s`
 
 ROOTDIR="$(pwd)"
-ZIG_VERSION="0.11.0-dev.4408+9e19969e0"
+ZIG_VERSION="0.11.0"
 
 TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 
