--- a/zig/doc/langref.html.in
+++ b/zig/doc/langref.html.in
@@ -314,8 +314,8 @@
           <a href="https://ziglang.org/documentation/0.9.1/">0.9.1</a> |
           <a href="https://ziglang.org/documentation/0.10.1/">0.10.1</a> |
           <a href="https://ziglang.org/documentation/0.11.0/">0.11.0</a> |
-          <a href="https://ziglang.org/documentation/0.12.0/">0.12.0</a> |
-          master
+          0.12.1 |
+          <a href="https://ziglang.org/documentation/master/">master</a>
         </nav>
         <nav aria-labelledby="table-of-contents">
           <h2 id="table-of-contents">Table of Contents</h2>
@@ -9040,7 +9040,7 @@ test "integer cast panic" {
       {#header_close#}
 
       {#header_open|@wasmMemorySize#}
-      <pre>{#syntax#}@wasmMemorySize(index: u32) u32{#endsyntax#}</pre>
+      <pre>{#syntax#}@wasmMemorySize(index: u32) usize{#endsyntax#}</pre>
       <p>
       This function returns the size of the Wasm memory identified by {#syntax#}index{#endsyntax#} as
       an unsigned value in units of Wasm pages. Note that each Wasm page is 64KB in size.
@@ -9054,7 +9054,7 @@ test "integer cast panic" {
       {#header_close#}
 
       {#header_open|@wasmMemoryGrow#}
-      <pre>{#syntax#}@wasmMemoryGrow(index: u32, delta: u32) i32{#endsyntax#}</pre>
+      <pre>{#syntax#}@wasmMemoryGrow(index: u32, delta: usize) isize{#endsyntax#}</pre>
       <p>
       This function increases the size of the Wasm memory identified by {#syntax#}index{#endsyntax#} by
       {#syntax#}delta{#endsyntax#} in units of unsigned number of Wasm pages. Note that each Wasm page
