--- a/lld/CMakeLists.txt
+++ b/lld/CMakeLists.txt
@@ -178,7 +178,6 @@ endif()
 include_directories(BEFORE
   ${CMAKE_CURRENT_BINARY_DIR}/include
   ${CMAKE_CURRENT_SOURCE_DIR}/include
-  ${CMAKE_CURRENT_SOURCE_DIR}/../zig/lib/libunwind/include
   )
 
 if (NOT LLVM_INSTALL_TOOLCHAIN_ONLY)
@@ -190,9 +189,7 @@ if (NOT LLVM_INSTALL_TOOLCHAIN_ONLY)
 endif()
 
 add_subdirectory(Common)
-if(LLD_BUILD_TOOLS)
-  add_subdirectory(tools/lld)
-endif()
+add_subdirectory(tools/lld)
 
 if (LLVM_INCLUDE_TESTS)
   add_custom_target(LLDUnitTests)
@@ -203,6 +200,7 @@ if (LLVM_INCLUDE_TESTS)
   add_subdirectory(test)
 endif()
 
+add_subdirectory(docs)
 add_subdirectory(COFF)
 add_subdirectory(ELF)
 add_subdirectory(MachO)
