--- a/build
+++ b/build
@@ -14,10 +14,10 @@ TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 # Here we map the OS from the target triple to the value that CMake expects.
 TARGET_OS_CMAKE=${TARGET_OS_AND_ABI%-*} # Example: linux
 case $TARGET_OS_CMAKE in
-  macos) TARGET_OS_CMAKE="Darwin";;
-  freebsd) TARGET_OS_CMAKE="FreeBSD";;
-  windows) TARGET_OS_CMAKE="Windows";;
-  linux) TARGET_OS_CMAKE="Linux";;
+  macos*) TARGET_OS_CMAKE="Darwin";;
+  freebsd*) TARGET_OS_CMAKE="FreeBSD";;
+  windows*) TARGET_OS_CMAKE="Windows";;
+  linux*) TARGET_OS_CMAKE="Linux";;
   native) TARGET_OS_CMAKE="";;
 esac
 
