--- a/build
+++ b/build
@@ -16,6 +16,7 @@ TARGET_OS_CMAKE=${TARGET_OS_AND_ABI%-*} # Example: linux
 case $TARGET_OS_CMAKE in
   macos*) TARGET_OS_CMAKE="Darwin";;
   freebsd*) TARGET_OS_CMAKE="FreeBSD";;
+  netbsd*) TARGET_OS_CMAKE="NetBSD";;
   windows*) TARGET_OS_CMAKE="Windows";;
   linux*) TARGET_OS_CMAKE="Linux";;
   native) TARGET_OS_CMAKE="";;
