build: replace CLANG_ENABLE_ARCMT with CLANG_ENABLE_OBJC_REWRITER
This changed in LLVM 21.

--- a/build
+++ b/build
@@ -181,7 +181,7 @@ cmake "$ROOTDIR/llvm" \
   -DCLANG_BUILD_TOOLS=OFF \
   -DCLANG_INCLUDE_DOCS=OFF \
   -DCLANG_INCLUDE_TESTS=OFF \
-  -DCLANG_ENABLE_ARCMT=ON \
+  -DCLANG_ENABLE_OBJC_REWRITER=ON \
   -DCLANG_TOOL_CLANG_IMPORT_TEST_BUILD=OFF \
   -DCLANG_TOOL_CLANG_LINKER_WRAPPER_BUILD=OFF \
   -DCLANG_TOOL_C_INDEX_TEST_BUILD=OFF \
