--- a/build
+++ b/build
@@ -7,7 +7,7 @@ TARGET="$1" # Example: riscv64-linux-gnu
 MCPU="$2" # Examples: `baseline`, `native`, `generic+v7a`, or `arm1176jzf_s`
 
 ROOTDIR="$(pwd)"
-ZIG_VERSION="0.15.0-dev.1601+c1483eb05"
+ZIG_VERSION="0.15.1"
 
 TARGET_OS_AND_ABI=${TARGET#*-} # Example: linux-gnu
 
